@@ -1,6 +1,10 @@
 bomber (4:15.12.2-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * New upstream bugfix release
+
+  [ Clive Johnston ]
+  * Removing overriden commands from rules
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 20:43:19 -0800
 
